Add basic RPS UI for users to interact with

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 
 </head>
 <body>
-    
+    <h1>Rock Paper Scissors</h1>
+
+    <div class='button-div'>
+        <h3>Player's Options</h2>
+        <!-- When users select one of the options below, start a round and 
+            submit their selection vs random computer results
+        -->
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
+
+    <div>
+        <!-- Display round results and tally -->
+        <h3>Results:</h3>
+    </div>
+
 </body>
 </html>
